# fontconfig

./: CMakeLists.txt  ChangeLog  ConfigureChecks.cmake  README  config.h.cmake  configure.in  fonts.conf.cmake
doc/: Makefile.am
fontconfig/: CMakeLists.txt  fontconfig.h
src/: CMakeLists.txt  fccfg.c  fcfreetype.c  fcxml.c
